Ej5 WP footer, fix nav bar collapsed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -32,10 +32,20 @@ p {
   border: $custom-gray;
 }
 
+.custom-bg-footer-footer {
+  background-color: #242946;
+  // margin-left: 0 !important;
+  // margin-right: 0 !important;
+}
+
 //navbar expanded header
 .nav-item:hover .nav-link {
   color: $secondary-color;
 }
+
+// .nav-item:hover .nav-link #loginButton {
+//   background-color: transparent;
+// }
 
 .navbar-nav .nav-link {
   font-weight: 500;
@@ -233,65 +243,23 @@ button.nav-link.active#sharing-tab {
   box-shadow: none !important;
 }
 
+.cust-txt-footer {
+  font-family: Arial, Helvetica, sans-serif !important;
+  letter-spacing: 3px;
+  margin-top: 25px;
+}
+
+.cust-h2-footer {
+  margin-top: 2rem;
+  font-size: 24px;
+  margin-bottom: 1rem;
+}
 
 //media queries
 @media (max-width: 767.8px) {
 
-  //nav bar collapsed
-  .navbar-collapse {
-
-    .navbar-brand-collapsedNavBar {
-      display: block;
-    }
-
-    .btn-close {
-      display: block;
-      color: white;
-      margin-left: auto;
-    }
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    justify-content: center;
-    width: 100%;
-    background-color: rgba(47, 53, 79, 0.85);
-
-    .nav-link {
-      color: white;
-      font-size: 1.1rem;
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-      padding: 1rem 10rem 1rem 10rem;
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      border-bottom: rgba(255, 255, 255, 0.25) 1px solid;
-    }
-
-    .nav-link:hover {
-      color: white;
-    }
-
-    .nav-link,
-    .nav-link.active {
-      color: white;
-    }
-
-    .navbar-nav {
-      margin-top: 2rem;
-    }
-
-    #loginButton {
-      background-color: transparent;
-      border-color: white;
-      margin-top: 1rem;
-      border-bottom: 0px;
-    }
-  }
-
+ 
+//---------------------------------------------------
   //main content card "Simple Bookmark Manager"
   .custom-card {
     transform: scale(1.1);
@@ -299,9 +267,6 @@ button.nav-link.active#sharing-tab {
     text-align: center;
   }
 
-  .custom-card .btn {
-    
-  }
 
   .custom-card .card-text {
     margin-top: 1rem;
@@ -384,6 +349,22 @@ button.nav-link.active#sharing-tab {
   .text-footer {
     margin-top: 3rem !important;
   }
+
+  
+
+  .cust-foot-txt-div {
+    padding-top: 1rem;
+ 
+  }
+
+ .cust-logo-footer {
+  margin-bottom: 1rem;
+ } 
+
+.cust-ic-div {
+  margin-top: 1rem;
+}
+
 }
 
 // footer
@@ -398,6 +379,11 @@ button.nav-link.active#sharing-tab {
   text-decoration: none;
   font-weight: 500;
   font-size: 0.875rem;
+}
+
+.btn.btn-submit {
+  background-color: $secondary-color;
+  border-color: $secondary-color;
 }
 
 // .icons:hover {
@@ -432,4 +418,53 @@ button.nav-link.active#sharing-tab {
     margin-bottom: 2rem;
     padding-left: 0;
   }
+}
+
+@media (max-width: 991.9px) {
+  
+   //nav bar collapsed
+   .navbar-collapse {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .navbar-collapse .nav-link {
+      color: black;
+      font-size: 1.1rem;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      padding: 1rem 10rem 1rem 10rem;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      border-bottom: rgba(14, 0, 0, 0.25) 1px solid;
+    }
+
+    .navbar-collapse .nav-link:hover {
+      color: $secondary-color;
+    }
+
+    .navbar-collapse .nav-link .nav-link.active {
+      color: black;
+    }
+
+    .navbar-collapse .navbar-nav {
+      margin-top: 2rem;
+    }
+
+    .navbar-collapse #loginButton {
+      background-color: $secondary-color;
+      border-color: $secondary-color;
+      margin-top: 1rem;
+    }
+
+    #logbutt {
+      border-bottom: none;
+    }
+  
 }
